k8s-manifest/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-example
  namespace: apps
spec:
  selector:
    app: rest-api-example
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
