k8s-manifest/Ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
    name: rest-api-example
    namespace: apps
spec:
  ingressClassName: 'nginx'
  tls:
  - hosts:
    - "domain.example.com"
    secretName: ssl-secret
  rules:
  - host: domain.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-api-example
            port: 
              number: 8000
